[gd_scene load_steps=3 format=3 uid="uid://dgdjcgi5ahb5f"]

[ext_resource type="Script" uid="uid://r7nqhv2nma45" path="res://ClassSelection.gd" id="1_ib1kh"]
[ext_resource type="Texture2D" uid="uid://ewkcn2t76xn2" path="res://assets/Space Background.png" id="2_m4wiv"]

[node name="ClassSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ib1kh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_m4wiv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Your Class"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MainContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ClassContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="InfoPanel" type="Panel" parent="VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassInfo" type="VBoxContainer" parent="VBoxContainer/MainContainer/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClassName" type="Label" parent="VBoxContainer/MainContainer/InfoPanel/ClassInfo"]
layout_mode = 2
text = "Class Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MainContainer/InfoPanel/ClassInfo"]
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="VBoxContainer/MainContainer/InfoPanel/ClassInfo"]
layout_mode = 2
size_flags_vertical = 3
text = "Class description goes here..."
fit_content = true

[node name="Stats" type="RichTextLabel" parent="VBoxContainer/MainContainer/InfoPanel/ClassInfo"]
layout_mode = 2
size_flags_vertical = 3
text = "Stats go here..."
fit_content = true

[node name="Abilities" type="RichTextLabel" parent="VBoxContainer/MainContainer/InfoPanel/ClassInfo"]
layout_mode = 2
size_flags_vertical = 3
text = "Abilities go here..."
fit_content = true

[node name="SelectButton" type="Button" parent="VBoxContainer/MainContainer/InfoPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Select Class"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 49.0
offset_right = 105.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 35
text = "Back"

[connection signal="pressed" from="VBoxContainer/MainContainer/InfoPanel/SelectButton" to="." method="_on_select_button_pressed"]
